sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value estPlusPetit
			if(estPlusPetit(i+1, i)){
                           ^